discussion/kv_engine/178970/178970_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Move bufferevent related code to subclass

This is a preparation for creating Folly backends

Change-Id: Iec74f093278a59d5b65cc182d527290ff8cf101d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-08-18 11:53:54.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-18 12:14:20.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20778/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20778/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19575/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/connection_libevent.h:23:5: warning: annotate this function with "override" or (rarely) "final" [modernize-use-override]
    ~LibeventConnection();
    ^
                          override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/mcbp/mock_connection.h:57:35: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
    void executeCommandPipeline() override {
                                  ^~~~~~~~~

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19575/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/mcbp/mock_connection.h:57:35:
error: only virtual member functions can be marked "override" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19575/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48484/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\daemon\connection_libevent.h(17): error C2011: "LibeventConnection": "class" type redefinition ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48484/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9267/ : FAILURE

Compile error at [2022-08-18T11:59:15.018Z] ../kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:97:20:
error: field type "FuzzConnection" is an abstract class
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9267/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9366/ : FAILURE

Compile error at [2022-08-18T12:03:49.767Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/connection_libevent.h:17:7:
error: redefinition of ?class LibeventConnection?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9366/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21514/ : FAILURE

Compile error at [2022-08-18T11:57:57.780Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/connection_libevent.h:17:7:
error: redefinition of ?class LibeventConnection?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21514/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21868/ : FAILURE

Compile error at [2022-08-18T11:59:06.022Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/connection_libevent.h:17:7:
error: redefinition of ?class LibeventConnection?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21868/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29896/ : FAILURE

Compile error at [2022-08-18T12:02:56.936Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/connection_libevent.h:17:7:
error: redefinition of "LibeventConnection"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29896/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22591/ : FAILURE

Compile error at [2022-08-18T11:57:27.678Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/mcbp/mock_connection.h:57:35:
error: only virtual member functions can be marked "override"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22591/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18787/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40743/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
